<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_travel_transparent_background"
    tools:context=".activities.RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_signup_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/login_travel_transparent_background"
            android:orientation="vertical">


            <include layout="@layout/toolbar" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sign_up_dialog_label"
                android:textColor="@color/alizarin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/layout_signup_content_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera_upload" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_login_24_8_alizarin" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_nickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="First and Last name"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/alizarin"
                            android:textCursorDrawable="@null"
                            android:textSize="15sp"
                            android:background="@drawable/bg_login_field"
                            android:theme="@style/EditTextAlizarinStyle" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_login_24_8_alizarin" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_username_txt"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/alizarin"
                            android:textCursorDrawable="@null"
                            android:textSize="15sp"
                            android:background="@drawable/bg_login_field"
                            android:theme="@style/EditTextAlizarinStyle" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_24_8_alizarin" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_email_txt"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/alizarin"
                            android:textCursorDrawable="@null"
                            android:textSize="15sp"
                            android:background="@drawable/bg_login_field"
                            android:theme="@style/EditTextAlizarinStyle" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_password_24_8_alizarin" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <in.anshul.libray.PasswordEditText
                            android:id="@+id/signup_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_pass_txt"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/alizarin"
                            android:textCursorDrawable="@null"
                            android:textSize="15sp"
                            android:background="@drawable/bg_login_field"
                            android:theme="@style/EditTextAlizarinStyle" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_password_24_8_alizarin" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <in.anshul.libray.PasswordEditText
                            android:id="@+id/signup_re_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_re_pass_txt"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/alizarin"
                            android:textCursorDrawable="@null"
                            android:textSize="15sp"
                            android:background="@drawable/bg_login_field"
                            android:theme="@style/EditTextAlizarinStyle" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_password_24_8_alizarin" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/signup_birthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Age"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/alizarin"
                            android:textCursorDrawable="@null"
                            android:textSize="15sp"
                            android:background="@drawable/bg_login_field"
                            android:theme="@style/EditTextAlizarinStyle" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location_24_0_alizarin"
                        android:paddingLeft="10dp"/>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/location_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/register_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Location"
                            android:inputType="number"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/alizarin"
                            android:textCursorDrawable="@null"
                            android:textSize="15sp"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:background="@drawable/bg_login_field"
                            android:theme="@style/EditTextAlizarinStyle" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioSex"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/image_border"
                            android:layout_weight="1"
                            android:text="Male"/>

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/image_border"
                            android:layout_weight="1"
                            android:text="Female" />

                    </RadioGroup>




                </LinearLayout>






                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/signup_user"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@color/green_background_color"
                        android:onClick="registerAccountClickHandler"
                        android:text="@string/register_btn_label"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="goSigninClickHandler"
                        android:padding="10dp"
                        android:text="@string/already_sign_label"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
